added incoming class and managed creation of incoming order

--- a/templates/movement/incoming.twig.html
+++ b/templates/movement/incoming.twig.html
@@ -5,7 +5,7 @@
     <section>
         <h1>Saisie d'une <span class="white">Réception Fournisseur</span></h1>
         <p class="error" id="feedbackIncomingForm"></p>
-        <form method="post" id="incomingForm" action="/movement/incoming">
+        <form method="post" id="incomingForm" action="/movement/incomingConfirm">
             <fieldset>
                 <legend>Entête Réception</legend>
                 <label>Fournisseur
