added incoming object creation and javascript to enforce return to list when some page number is requested

--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -36,7 +36,7 @@
         </div>       
     </section>
     <section>
-        <h2>Liste des Articles</h2>
+        <h2 id="list">Liste des Articles</h2>
             {% if entities == null %}
                 <p class="error">Aucun article à afficher.</p>
             {% else %}
