--- a/templates/admin/location/index.twig.html
+++ b/templates/admin/location/index.twig.html
@@ -81,7 +81,7 @@
             <input type="hidden" name="token" id="token" value="{{ token }}">
         </form>
         
-        <h2>Liste</h2>
+        <h2 id="list">Liste</h2>
         <p class="error" id="locationSearchFeedback"></p>
         <form method="POST" id="searchLocationForm" action="/location/index">
             <label>Rechercher un emplacement
