fixed multiple token issue

--- a/templates/admin/user/index.twig.html
+++ b/templates/admin/user/index.twig.html
@@ -70,7 +70,7 @@
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                 </label>
                 <input type="submit" id="userSubmit">
-                <input type="hidden" name="token" id="token" value="{{ token }}">
+                <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
             </form>
         </section>
     </section>
