--- a/templates/admin/user/login.twig.html
+++ b/templates/admin/user/login.twig.html
@@ -22,7 +22,7 @@
                 <input type="password" name="password" id="password" required>
             </label>
             <input type="submit" value="Se connecter">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
         </form>
     </section>
 
