--- a/templates/admin/user/show.twig.html
+++ b/templates/admin/user/show.twig.html
@@ -46,7 +46,7 @@
                     <input type="password" id="newPasswordConfirm" name="newPasswordConfirm">
                 </label>
                 <input type="submit" value="Mettre à jour">
-                <input type="hidden" id="token" name="token" value = {{ token }}>
+                <input type="hidden" id="token0" name="token0" value = {{ token0 }}>
             </form>
         {% endif %}
     </section>
