--- a/templates/article/show.twig.html
+++ b/templates/article/show.twig.html
@@ -45,7 +45,7 @@
                 </label>
                 <input type="submit" value="Mettre à jour">
                 <input type="hidden" id="code" name="code" value = {{ article.code }}>
-                <input type="hidden" id="token" name="token" value = {{ token }}>
+                <input type="hidden" id="token0" name="token0" value = {{ token0 }}>
             </form>
         {% endif %}
     </section>
