--- a/templates/stock/index.twig.html
+++ b/templates/stock/index.twig.html
@@ -10,7 +10,7 @@
                 <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
             </label>
             <input type="submit" value="Rechercher">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
         </form>
         {% if entities == null %}
             <p class="error">Aucun stock à afficher.</p>
