--- a/templates/admin/location/index.twig.html
+++ b/templates/admin/location/index.twig.html
@@ -35,7 +35,7 @@
                 <input type="text" name="level" id="level" required>
             </label>
             <input type="submit" value="Créer l'emplacement" id="locationSingleSubmit">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
         </form>
         <h2>Créer un intervalle d'emplacements</h2>
         <p id="locationIntervalFeedback" class="error"></p>
@@ -71,14 +71,14 @@
                 </label>
             </fieldset>
             <input type="submit" value="Créer les emplacements" id="locationIntervalSubmit">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token1" id="token1" value="{{ token1 }}">
         </form>
         <h2>Importer un fichier</h2>
         <p>Télécharger un <a href="/csv/importLocations.csv">fichier Emplacements</a>.</p>
         <form method="POST" enctype="multipart/form-data" action="/location/import">
             <input type="file" name="locationFile" id="locationFile" class="button icon file-icon" accept=".csv" required>
             <input type="submit" name="Importer">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token2" id="token2" value="{{ token2 }}">
         </form>
         
         <h2 id="list">Liste</h2>
@@ -88,7 +88,7 @@
                 <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
             </label>
             <input type="submit" value="Rechercher">
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token3" id="token3" value="{{ token3 }}">
         </form>
 
         {% if entities == null %}
