--- a/templates/movement/incoming.twig.html
+++ b/templates/movement/incoming.twig.html
@@ -37,7 +37,7 @@
                 </div>
             </fieldset>
             <p><a href="#" class="button icon add-icon" id="addRowButton">Ajouter une ligne</a></p>
-            <input type="hidden" name="token" id="token" value="{{ token }}">
+            <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
             <input type="submit" value="Enregister">
         </form>
     </section>    
