fixed area id double on locationController

--- a/templates/admin/location/index.twig.html
+++ b/templates/admin/location/index.twig.html
@@ -41,7 +41,7 @@
         <p id="locationIntervalFeedback" class="error"></p>
         <form method="POST" id="locationIntervalForm" action="/location/createinterval">
             <label>Zone
-                <input type="text" name="area" id="area" required>
+                <input type="text" name="intervalArea" id="intervalArea" required>
             </label>
             <fieldset>
                 <legend>Allées</legend>
