--- a/templates/article/new.twig.html
+++ b/templates/article/new.twig.html
@@ -37,7 +37,7 @@
                 <input type="text" id="barcode" name="barcode">
             </label>
             <input type="submit" value="Créer l'article" id="articleSubmit">
-            <input type="hidden" id="token0" name="token0" value = {{ token }}>
+            <input type="hidden" id="token0" name="token0" value = {{ token0 }}>
         </form>
     </section>
 {% endblock %}
