--- a/templates/admin.twig.html
+++ b/templates/admin.twig.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/css/style.css" />
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,900&amp;display=swap" rel="stylesheet">
+        <link ref="shortcut icon" href="favicon.ico">
         <title>ManaStock [ADMIN] - {% block title %}{% endblock %}</title>
     </head>
 
