refactored incoming and restored status

--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -18,7 +18,8 @@
                     <ul>
                         <li><a href="/article/index" class="icon article-icon">Articles</a></li>
                         <li><a href="/stock/index" class="icon stock-icon">Stocks</a></li>
-                        <li><a href="/movement/index" class="icon movement-icon">Mouvements</a></li>
+                        <li><a href="/incoming/index" class="icon movement-icon">Réceptions</a></li>
+                        <li><a href="/outgoing/index" class="icon movement-icon">Préparations</a></li>
                         {% if role == 'admin' or role == 'superadmin' %}
                             <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
                         {% endif %}
