--- a/templates/incoming/index.twig.html
+++ b/templates/incoming/index.twig.html
@@ -15,7 +15,9 @@
         <h2>Rechercher une réception</h2>
         <p class="error" id="incomingSearchFeedback"></p>
         <form method="POST" id="searchIncomingForm" action="/incoming/index">
-            <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
+            <label>Référence
+                <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
+            </label>
             <input type="submit" value="Rechercher">
             <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
         </form>
