--- a/templates/incoming/index.twig.html
+++ b/templates/incoming/index.twig.html
@@ -3,17 +3,17 @@
 
 {% block body %}
     <h1>Gestion des <span class="white">Réceptions</span></h1>
-    {% if log == "tokenError" %}
-        <p class="error">Un problème technique est survenu.</p>
+    {% if log == "unfound" %}
+        <p class="error">La réception n'existe pas.</p>
     {% elseif log == "moveOK" %}
-        <p class="valid">La réception a bien été créée.</p>
+        <p class="valid">La réception a bien mise à jour.</p>
     {% elseif log == "moveNOK" %}
         <p class="error">La réception n'a pas pu été créée.</p>      
     {% elseif log == "deleteNOK" %}
-        <p class="error">La réception n'a pas pu été supprimée.</p>   
+        <p class="error">La réception n'a pas pu été supprimée.</p>     
     {% endif %}
     <section>
-        <p>Saisir une <a href="/incoming/new">Réception Fournisseur</a></p>
+        <p>Saisir une <a href="/incoming/edit">Réception Fournisseur</a></p>
         <h2>Rechercher une réception</h2>
         <p class="error" id="incomingSearchFeedback"></p>
         <form method="POST" id="searchIncomingForm" action="/incoming/index">
@@ -54,7 +54,13 @@
                                 </td>
                                 <td>
                                     <ul class="article-edit">
-                                        <li><a href="/incoming/show/{{ movement.id }}" class="button icon edit-icon">Editer</a></li>
+                                        <li>
+                                            {% if movement.status != "received" %}
+                                                <a href="/incoming/edit/{{ movement.id }}" class="button icon edit-icon">Editer</a>
+                                            {% else %}
+                                                <a href="/incoming/edit/{{ movement.id }}" class="button icon view-icon">Voir</a>
+                                            {% endif %}
+                                        </li>
                                         {% if movement.status == "pending" %}
                                             <li><a href="/incoming/delete/{{ movement.id }}" class="button icon delete-icon" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer ce mouvement ?');">Supprimer</a></li>
                                         {% endif %}
