--- a/templates/stock/index.twig.html
+++ b/templates/stock/index.twig.html
@@ -3,7 +3,7 @@
 
 {% block body %}
     <section>
-        <h1 id="list">Liste des Stocks</h1>
+        <h1 id="list">Liste des <span class="white">Stocks</span></h1>
         <p class="error" id="stockSearchFeedback"></p>
         <form method="POST" id="searchStockForm" action="/stock/index">
             <label>Rechercher un produit
