--- a/templates/incoming/index.twig.html
+++ b/templates/incoming/index.twig.html
@@ -31,7 +31,7 @@
             {% if entities == null %}
                 <p class="error">Aucune réception à afficher.</p>
             {% else %}
-                <table>
+                <table id="incomingTable">
                     <thead>
                         <tr>
                             <th>ID</th>
