--- a/templates/stock/index.twig.html
+++ b/templates/stock/index.twig.html
@@ -15,7 +15,7 @@
         {% if entities == null %}
             <p class="error">Aucun stock à afficher.</p>
         {% else %}
-            <table>
+            <table id="stockTable">
                 <thead>
                     <tr>
                         <th>ID</th>
