--- a/templates/admin/location/index.twig.html
+++ b/templates/admin/location/index.twig.html
@@ -94,7 +94,7 @@
         {% if entities == null %}
             <p class="error">Aucun emplacement à afficher.</p>
         {% else %}
-            <table>
+            <table id="locationTable">
                 <thead>
                     <tr>
                         <th>ID</th>
