--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -14,35 +14,32 @@
         <p class='error'>Une erreur technique est survenue.</p>
     {% endif %}
     <h1>Gestion des <span class="white">Articles</span></h1>
-    <section id="articles-actions">
-        <div class="articles-action">
-            <h3>Créer un Article</h3>
-            <a href="/article/new" class="button icon new-icon">Ajouter un Article</a>
-        </div>
-        <div class="articles-action">
-            <h3>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h3>
-            <form method="POST" enctype="multipart/form-data" action="/article/import">
-                <input type="file" name="articleFile" id="articleFile" class="button icon file-icon" accept=".csv" required>
-                <input type="submit" name="Importer">
-                <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
-            </form>
-        </div>
-        <div class="articles-action">  
-            <h3>Rechercher un Article</h3>
-            <p class="error" id="articleSearchFeedback"></p>
-            <form method="POST" id="searchArticleForm" action="/article/index">
-                <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
-                <input type="submit" value="Rechercher">
-                <input type="hidden" name="token1" id="token1" value="{{ token1 }}">
-            </form>
-        </div>       
+    <section>
+        <h2>Créer un Article</h2>
+        <h3>Saisir un article unique</h3>
+            <p>        
+                <a href="/article/new" class="button icon new-icon">Ajouter un Article</a>
+            </p>
+        <h3>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h3>
+        <form method="POST" enctype="multipart/form-data" action="/article/import">
+            <input type="file" name="articleFile" id="articleFile" class="button icon file-icon" accept=".csv" required>
+            <input type="submit" name="Importer">
+            <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
+        </form>
+        <h3>Rechercher un Article</h3>
+        <p class="error" id="articleSearchFeedback"></p>
+        <form method="POST" id="searchArticleForm" action="/article/index">
+            <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
+            <input type="submit" value="Rechercher">
+            <input type="hidden" name="token1" id="token1" value="{{ token1 }}">
+        </form>
     </section>
     <section>
         <h2 id="list">Liste des Articles</h2>
             {% if entities == null %}
                 <p class="error">Aucun article à afficher.</p>
             {% else %}
-                <table>
+                <table id="articleTable">
                     <thead>
                         <tr>
                             <th>ID</th>
