--- a/public/css/style.css
+++ b/public/css/style.css
@@ -259,15 +259,17 @@ tr:nth-of-type(even) {
 }
 /* END buttons */
 
-
-html, body {
+body, html {
     width: 100%;
     height: 100%;
-    margin: 0;
-    padding: 0;
 }
 
 body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     background: white url(../images/industrial-hall-1630742_1280.jpg) no-repeat center center fixed;
     background-size: cover;
 }
@@ -279,6 +281,7 @@ main {
     background-color: #92a5b3;
     box-shadow: -1px 2px 5px 1px rgba(0, 51, 102, 0.4);
     border-radius: 10px;
+    box-sizing: border-box;
 }
 
 /* header */
@@ -414,13 +417,13 @@ header nav {
 
 /* RESPONSIVE */
 @media all and (max-width: 1024px) {
-    html, body {
+    html, body, main {
         min-width: 400px;
-        width: 100%;
     }
 
     main {
         width: 100%;
+        margin: 0;
         border-radius: 0;
     }
 
