--- a/templates/admin/user/login.twig.html
+++ b/templates/admin/user/login.twig.html
@@ -15,10 +15,10 @@
         {% endif %}
         <h1>Connexion</h1>
         <form method="POST" action="/login">
-            <label>Nom d'utilisateur
+            <label for="username">Nom d'utilisateur
                 <input type="text" name="username" id="username" required>
             </label>
-            <label>Mot de passe
+            <label for="password">Mot de passe
                 <input type="password" name="password" id="password" required>
             </label>
             <input type="submit" value="Se connecter">
