--- a/templates/base.twig.html
+++ b/templates/base.twig.html
@@ -19,7 +19,7 @@
                         <li><a href="/article/index" class="icon article-icon">Articles</a></li>
                         <li><a href="/stock/index" class="icon stock-icon">Stocks</a></li>
                         <li><a href="/incoming/index" class="icon incoming-icon">Réceptions</a></li>
-                        <li><a href="/outgoing/index" class="icon outgoing-icon">Préparations</a></li>
+                        <li><a href="/outgoing/index" class="icon outgoing-icon">Expéditions</a></li>
                         {% if role == 'admin' or role == 'superadmin' %}
                             <li><a href="/user/index" class="icon admin-icon">Admin</a></li>
                         {% endif %}
