--- a/templates/article/index.twig.html
+++ b/templates/article/index.twig.html
@@ -22,14 +22,18 @@
             </p>
         <h3>Importer un <a href="/csv/importArticles.csv">fichier Articles</a></h3>
         <form method="POST" enctype="multipart/form-data" action="/article/import">
-            <input type="file" name="articleFile" id="articleFile" class="button icon file-icon" accept=".csv" required>
+            <label for="articleFile">Sélectionner un fichier
+                <input type="file" name="articleFile" id="articleFile" class="button icon file-icon" accept=".csv" required>
+            </label>
             <input type="submit" name="Importer">
             <input type="hidden" name="token0" id="token0" value="{{ token0 }}">
         </form>
         <h3>Rechercher un Article</h3>
         <p class="error" id="articleSearchFeedback"></p>
         <form method="POST" id="searchArticleForm" action="/article/index">
-            <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
+            <label for="queryString">Rechercher
+                <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
+            </label>
             <input type="submit" value="Rechercher">
             <input type="hidden" name="token1" id="token1" value="{{ token1 }}">
         </form>
