--- a/templates/incoming/edit.twig.html
+++ b/templates/incoming/edit.twig.html
@@ -8,13 +8,13 @@
         <form method="post" id="incomingForm" action="/incoming/confirm">
             <fieldset>
                 <legend>Entête Réception</legend>
-                <label>Fournisseur
+                <label for="provider">Fournisseur
                     <input type="text" name="provider" id="provider" autocomplete="off" value="{{ incoming.provider }}" required{% if incoming.status == "received" %} disabled{% endif %}>
                 </label>
-                <label>Référence
+                <label for="reference">Référence
                     <input type="text" name="reference" id="reference" autocomplete="off" value="{{ incoming.reference }}" required{% if incoming.status == "received" %} disabled{% endif %}>
                 </label>
-                <label>Statut
+                <label for="status">Statut
                     <select name="status" id="status" {% if incoming.status == "received" %} disabled{% endif %}>
                         <option value="pending"{% if incoming.status == "pending" %} selected{% endif %}>En attente</option>
                         <option value="received"{% if incoming.status == "received" %} selected{% endif %}>Réceptionnée</option>
@@ -33,7 +33,7 @@
                             </div>
                             <div class="orderField">
                                 <label for="quantity{{ loop.index }}">Quantité</label>
-                                <input type="number" name="quantity{{ loop.index }}" id="quantity{{ loop.index }}" value="{{ row.qty }}" required{% if incoming.status == "received" %} disabled{% endif %}>                        
+                                <input type="number" min="1" name="quantity{{ loop.index }}" id="quantity{{ loop.index }}" value="{{ row.qty }}" required{% if incoming.status == "received" %} disabled{% endif %}>                        
                             </div>
                             <div class="orderField">
                                 <label for="location{{ loop.index }}">Emplacement</label>
