--- a/templates/outgoing/index.twig.html
+++ b/templates/outgoing/index.twig.html
@@ -1,26 +1,26 @@
 {% extends "base.twig.html" %}
-{% block title %}Liste des Mouvements d'entrée{% endblock %}
+{% block title %}Liste des Mouvements de sortie{% endblock %}
 
 {% block body %}
-    <h1>Gestion des <span class="white">Réceptions</span></h1>
+    <h1>Gestion des <span class="white">Expéditions</span></h1>
     {% if log == "unfound" %}
-        <p class="error">La réception n'existe pas.</p>
+        <p class="error">L'expédition n'existe pas.</p>
     {% elseif log == "tokenError" %}
         <p class="error">Un problème technique est survenu.</p>
     {% elseif log == "moveOK" %}
-        <p class="valid">La réception a bien été mise à jour.</p>
+        <p class="valid">L'expédition a bien été mise à jour.</p>
     {% elseif log == "moveNOK" %}
-        <p class="error">La réception n'a pas pu été créée.</p>    
+        <p class="error">L'expédition n'a pas pu été créée.</p>    
     {% elseif log == "deleteOK" %}
-        <p class="error">La réception a bien été supprimée.</p>     
+        <p class="error">L'expédition a bien été supprimée.</p>     
     {% elseif log == "deleteNOK" %}
-        <p class="error">La réception n'a pas pu été supprimée.</p>     
+        <p class="error">L'expédiotion n'a pas pu été supprimée.</p>     
     {% endif %}
     <section>
-        <p>Saisir une <a href="/incoming/edit">Réception Fournisseur</a></p>
-        <h2>Rechercher une réception</h2>
-        <p class="error" id="incomingSearchFeedback"></p>
-        <form method="POST" id="searchIncomingForm" action="/incoming/index">
+        <p>Saisir une <a href="/outgoing/edit">Expédition Client</a></p>
+        <h2>Rechercher une expédition</h2>
+        <p class="error" id="outgoingSearchFeedback"></p>
+        <form method="POST" id="searchOutgoingForm" action="/outgoing/index">
             <label for="queryString">Référence
                 <input type="text" name="queryString" id="queryString" value="{{ queryString }}">
             </label>
@@ -29,11 +29,11 @@
         </form>
     </section>    
     <section>
-        <h2 id="list">Liste des Réceptions</h2>
+        <h2 id="list">Liste des Expéditions</h2>
             {% if entities == null %}
-                <p class="error">Aucune réception à afficher.</p>
+                <p class="error">Aucune expédition à afficher.</p>
             {% else %}
-                <table id="incomingTable">
+                <table id="outgoingTable">
                     <thead>
                         <tr>
                             <th>ID</th>
@@ -50,8 +50,8 @@
                                 <td>{{ movement.reference }}</td>
                                 <td>{{ movement.createdAt|date("m/d/Y") }}</td>
                                 <td>
-                                {% if movement.status == "received" %}
-                                    Réceptionnée
+                                {% if movement.status == "shipped" %}
+                                    Expédiée
                                 {% else %}
                                     En attente
                                 {% endif %}
@@ -59,14 +59,14 @@
                                 <td>
                                     <ul class="article-edit">
                                         <li>
-                                            {% if movement.status != "received" %}
-                                                <a href="/incoming/edit/{{ movement.id }}" class="button icon edit-icon">Editer</a>
+                                            {% if movement.status != "shipped" %}
+                                                <a href="/outgoing/edit/{{ movement.id }}" class="button icon edit-icon">Editer</a>
                                             {% else %}
-                                                <a href="/incoming/edit/{{ movement.id }}" class="button icon view-icon">Voir</a>
+                                                <a href="/outgoing/edit/{{ movement.id }}" class="button icon view-icon">Voir</a>
                                             {% endif %}
                                         </li>
                                         {% if movement.status == "pending" %}
-                                            <li><a href="/incoming/delete/{{ movement.id }}" class="button icon delete-icon" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer ce mouvement ?');">Supprimer</a></li>
+                                            <li><a href="/outgoing/delete/{{ movement.id }}" class="button icon delete-icon" onclick="return confirm('Etes-vous sûr(e) de vouloir supprimer ce mouvement ?');">Supprimer</a></li>
                                         {% endif %}
                                     </ul>
                                 </td>
@@ -77,11 +77,11 @@
                                 <td colspan="5">
                                     Page(s) :
                                     {% if previousPage is defined %} 
-                                        <a href="/incoming/index/{{ previousPage }}">{{ previousPage }}</a>
+                                        <a href="/outgoing/index/{{ previousPage }}">{{ previousPage }}</a>
                                     {% endif %}
                                     {{ currentPage }} 
                                     {% if nextPage is defined %} 
-                                        <a href="/incoming/index/{{ nextPage }}">{{ nextPage }}</a>
+                                        <a href="/outgoing/index/{{ nextPage }}">{{ nextPage }}</a>
                                     {% endif %}
                                 </td>
                             </tr>
@@ -93,5 +93,5 @@
 {% endblock %}
 
 {% block js %}
-    <script src="/js/searchIncomingForm.js"></script>
+    <script src="/js/searchOutgoingForm.js"></script>
 {% endblock %}
